--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,18 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-align: center;
 }
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(211, 167, 167);
+}
+
+.bgcred {
+    background-color: red;
+}
+
+.bgcgreen {
+    background-color: green;
 }
