--- a/src/Common/search.module.css
+++ b/src/Common/search.module.css
@@ -12,7 +12,7 @@
     padding: 8px 3px;
     color: #6d28d9;
     width: 300px;
-    margin-left: 1rem;
+    margin: 1rem 0px 0.5rem 1rem;
 }
 
 .formcontrol input:focus {
